src/test/ui/editions/edition-imports-2018.stderr
error: cannot glob-import all possible crates
  --> $DIR/edition-imports-2018.rs:24:5
   |
LL |     gen_glob!();
   |     ^^^^^^^^^^^^
   |
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: aborting due to previous error

